--- a/ToolSolution/ToolSolution.csproj
+++ b/ToolSolution/ToolSolution.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Addins\MesHelper.cs" />
     <Compile Include="Addins\NFCHelper.cs" />
     <Compile Include="Addins\PortDetect.cs" />
+    <Compile Include="Addins\QLIBHelper.cs" />
     <Compile Include="Addins\SerialHelper.cs" />
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
