--- a/QLIBHelper/QLIBHelper.csproj
+++ b/QLIBHelper/QLIBHelper.csproj
@@ -43,6 +43,7 @@
   <ItemGroup>
     <Compile Include="QLIB.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QLIB_Defines.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
